# ukama

./: .env-test  .env.development  .env.production  .eslintrc  .gitignore  .gitmodules  .prettierignore  CODE_OF_CONDUCT.md  DEVELOPER.md  Dockerfile  Makefile  PRINCIPLES.md  README  README.md  codegen.yml  config.mk  contributing.md  dangerfile.ts  go.mod  go.sum  jest.config.ts  main.go  package.json  parse.go  patch.diff  replace-key.py  test.sh  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: prepare-commit-msg
.husky/: pre-commit
api-gateway/: README.md  go.mod  go.sum  login.sh
bff_integration/: Int.Dockerfile
builder/: Makefile  deploy_config.json  deploy_orgs_config.json  metadata.json  nodes_id_build.json  nodes_id_deploy.json  ukama.json
cli/: go.mod  go.sum
cloud/: docker-compose.yaml
cmd/: events.go  main.go  push.go  root.go  scan.go
common/: Makefile  go.mod  go.sum
config/: config.go
distro/: Makefile
distro/system/init/src/micros/sub/: Cargo.toml
distro/system/init/src/micros/sub/src/: main.rs
distro/system/init/src/micros/sys/: Cargo.toml
distro/system/init/src/micros/sys/src/: cmd.rs
firmware/: .Makefile.swp  Makefile
grpc/: grpc_server.go  health_checker.go  utils.go
hub/: Makefile  README.md  go.mod
inc/: devhelper.h  device_ops.h  driver_ops.h  errorcode.h  inventory.h  irqdb.h  irqhelper.h  jdata.h  jserdes.h  json_types.h  ledger.h  mfg.h  mfg_parser.h  noded_macros.h  prop_parser.h  property.h  schema.h  service.h  store.h  vnodealert.h  web_service.h
internal/: config.go
lookup/: Makefile  README.md  go.mod
metrics/: metrics.go
mocks/: NodeRepo.go  OrgRepo.go
msgbus/: msgbus.go
nginx/: nginx.conf
nmr/: Makefile  go.mod  go.sum
nodes/: manifest.json
nodes/ukamaOS/distro/system/init/src/micros/preInit/: Cargo.toml
nodes/ukamaOS/distro/system/init/src/micros/preInit/src/: main.rs
nodes/ukamaOS/distro/system/init/src/micros/test/sysd/: Cargo.toml
nodes/ukamaOS/distro/system/init/src/micros/test/sysd/src/: main.rs
os/: Makefile
pkg/: config.go  ip_resolve.go  listener.go
public/: earth.fbx  index.html
registry/: Makefile  README.md  go.mod  go.sum
rest/: fizz.go  utils.go
service/: noded.c  service.c
services/: Makefile  README.md
sql/: db.go
src/: App.test.tsx  App.tsx  core.c  index.css  index.ts  index.tsx  noded.c  service.c
srvc_router/: srvc_router.go
srvcrouter/: srvcrouter.go
systems/: Makefile  README.md  (+3 more)
(+12491 files in other folders)
