[package]
name = "sub"
version = "0.1.0"
authors = ["vishal <vthakur7f@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["termcolor"]

[dependencies]
nix = "0.19.1"
system_shutdown = "3.0.0"
prctl = "1.0.0"
csv="1.1.5"
serde = { version = "1.0.118", features = ["derive"] }
rlimit = "0.5.3"
hostname = "^0.3.0"
glob = "0.3.0"
simplelog = "^0.9.0"
log = { version = "0.4.*", features = ["max_level_trace","std","release_max_level_debug"] }
termcolor = { version = "1.1.*", optional = true }