[package]
name = "sysinit"
version = "0.1.0"
authors = ["vishal <vthakur7f@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["termcolor"]

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
toml = "0.5.8"
lazy_static = "1.4.0"
nix = "0.19.1"
prctl = "1.0.0"
wait-timeout = "0.2.0"
procfs = "0.9.1"
simplelog = "^0.9.0"
log = { version = "0.4.*", features = ["max_level_trace","std","release_max_level_debug"] }
termcolor = { version = "1.1.*", optional = true }

[dev-dependencies]
serde_derive = "1.0.123"
